<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    tools:context=".ui.main.pages.user.UserProfileFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12"
        tools:src="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/username"
        app:layout_constraintRight_toLeftOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@id/divider"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:text="Username1234" />

    <TextView
        android:id="@+id/reputation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/reputation"
        app:layout_constraintRight_toLeftOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/username_label" />

    <TextView
        android:id="@+id/reputation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@id/divider"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:text="1548252" />

    <TextView
        android:id="@+id/badges_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/bagdes"
        app:layout_constraintRight_toLeftOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/reputation_label" />

    <TextView
        android:id="@+id/badges_gold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/gold"
        app:layout_constraintLeft_toRightOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@+id/reputation" />

    <TextView
        android:id="@+id/gold_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@id/badges_gold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/badges_gold"
        tools:text="3554" />

    <TextView
        android:id="@+id/badges_silver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/silver"
        app:layout_constraintLeft_toRightOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@+id/badges_gold" />

    <TextView
        android:id="@+id/silver_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@id/badges_silver"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/badges_silver"
        tools:text="3554" />

    <TextView
        android:id="@+id/badges_bronze"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/bronze"
        app:layout_constraintLeft_toRightOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@+id/badges_silver" />

    <TextView
        android:id="@+id/bronze_score"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@id/badges_bronze"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/badges_bronze"
        tools:text="3554" />

    <TextView
        android:id="@+id/date_joined_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/date_joined"
        app:layout_constraintRight_toLeftOf="@id/divider"
        app:layout_constraintTop_toBottomOf="@id/badges_bronze" />

    <TextView
        android:id="@+id/date_joined"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:maxLines="1"
        app:layout_constraintLeft_toRightOf="@id/divider"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/badges_bronze"
        tools:text="31/01/2019" />

    <Space
        android:id="@+id/divider"
        android:layout_width="24dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />
</androidx.constraintlayout.widget.ConstraintLayout>
